feat: Add reusable UI components and utility functions
- Implemented Modal, Dropdown, Tabs, Accordion, FormValidator, Pagination, Toast, and ProgressBar components for enhanced UI functionality.
- Created utility functions for date formatting, validation, and DOM manipulation.
- Updated QuizController to include chapter filtering and improved question navigation.
- Enhanced QuestionDTO to support chapter information.
- Modified student_join.fxml to include a sidebar for chapter selection.
- Added filtering capabilities in the faculty portal for better question management.